# sofar_assignment

./: CMakeLists.txt  README.md  package.xml
atomic_configure/: setup.sh
catkin_generated/: generate_cached_setup.py  setup_cached.sh
catkin_generated/installspace/: _setup_util.py
devel/: local_setup.sh
images/: description.txt
launch/: simulation.launch  world.launch
scripts/: box_tracker_server.py  color_detection_server.py  spawn_box_server.py
src/: main.cpp  move_head.cpp
srv/: Conveyor.srv  DetectColor.srv  Spawner.srv
urdf/: bin.urdf  blue_box.urdf  conveyor.urdf  green_bin.urdf  green_box.urdf  yellow_box.urdf
